--- a/public/chatbox.html
+++ b/public/chatbox.html
@@ -32,6 +32,7 @@ var actionButton = new ActionButton({
   itemClick: function(item) {
     console.log(item.index)
   },
+  autoHide:true,
   items: [{
     img: './img/wx.png',
     text: '微信'
